カラー変更

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,6 +242,7 @@ ul li {
   letter-spacing: 0.06em;
   width: 100%;
   text-align: center;
+  color: #fff;
 }
 .Cool_Crystals_LP_main .main_content .main_background .main_title:nth-child(1) {
   padding-top: 96px;
