--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,7 @@
                             letter-spacing:0.06em;
                             width: 100%;
                             text-align: center;
+                            color:#fff;
 
                             &:nth-child(1) {
                                 padding-top: 96px;
